--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+body{ background-image: url('https://www.pixel-tech.eu/wp-content/uploads/sites/6/2016/08/event-print-light-bg.png');
+
+    background-repeat: no-repeat;background-size: cover;}
